add fix categorizador con logs+generador de imagenes+app properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,16 @@
 spring.application.name=ecomart
 
+#api-key
 spring.ai.openai.api-key=${OPENAI_API_KEY}
+#model
 spring.ai.openai.chat.options.model=gpt-4o-mini
+#max numero de intentos
+spring.ai.retry.max-attempts=15
+#intervalo de tiempo entre intentos
+#Initial sleep duration for the exponential backoff policy.
+spring.ai.retry.backoff.initial-interval=10
+#Maximum backoff duration., max = 3 min
+spring.ai.retry.backoff.max-interval=300
+#To see the logs, set the logging level for the advisor package to DEBUG:
+#activar la generación de logs
+logging.level.org.springframework.ai.chat.client.advisor=DEBUG
