add generacionDeImagenes y finalizacion, falto pruebas con la API, OPENAI

--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,10 @@
 			<artifactId>spring-ai-starter-model-openai</artifactId>
 			<version>1.0.1</version>
 		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>org.springframework.ai</groupId>-->
+<!--			<artifactId>spring-ai-starter-model-anthropic</artifactId>-->
+<!--		</dependency>-->
 		<dependency>
 			<groupId>com.knuddels</groupId>
 			<artifactId>jtokkit</artifactId>
